# aya-template

./: Cargo.toml  Dockerfile  README.md  cargo-generate.toml
{{project-name}}/: Cargo.toml
{{project-name}}-ebpf/: Cargo.toml
{{project-name}}-ebpf/.cargo/: config.toml
{{project-name}}-ebpf/src/: main.rs
{{project-name}}/src/: main.rs
