cargo-features = ["build-std=core"]

[package]
name = "{{ project-name }}-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
{{ project-name }}-common = { path = "../{{ project-name }}-common" }

[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[profile.release]
panic = "abort"
