[package]
name = "{{ project-name }}-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "cb57d10d25611a35b2cc34523d95b9f331470958" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", tag = "aya-log-v0.1.9" }
{{ project-name }}-common = { path = "../{{ project-name }}-common" }

[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []

[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya", rev = "cb57d10d25611a35b2cc34523d95b9f331470958" }
