[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
{{project-name}}-common = { path = "../{{project-name}}-common", features=["user"] }
anyhow = "1.0.42"
{% case program_type %}
{%- when
"xdp", "classifier", "sock_ops", "cgroup_skb", "cgroup_sysctl", "cgroup_sockopt", "uprobe", "uretprobe" -%}
clap = { version = "4.0", features = ["derive"] }
{%- endcase %}
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.24.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
