{% assign program_types_with_opts = "xdp, classifier, sock_ops, cgroup_skb, cgroup_sysctl, cgroup_sockopt, uprobe, uretprobe" | split: ", " %}
[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

{{project-name}}-common = { path = "../{{project-name}}-common", features=["user"] }

aya = { version = ">=0.11", features = ["async_tokio"] }
aya-log = "0.1"
anyhow = "1.0.42"
{% if program_types_with_opts contains program_type %}
clap = { version = "4.0", features = ["derive"] }
{% endif %}
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.24.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
